resources/image-builder/production/composer/image-builder-composer.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
    haproxy.router.openshift.io/timeout: 120s
  labels:
    service: image-builder-composer
  name: image-builder-composer-route
spec:
  host: jjgrs6byc8virun.api.openshift.com
  port:
    targetPort: composer-api
  to:
    kind: Service
    name: image-builder-composer
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
